--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = org.jetbrains.plugins.template
-pluginName = IntelliJ Platform Plugin Template
-pluginVersion = 3.0.3
+pluginName = DartJsonGenerator
+pluginVersion = 3.1.1
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html#intellij-platform-based-products-of-recent-ide-versions
 # for insight into build numbers and IntelliJ Platform versions.
