--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@
 
 pluginGroup = org.jetbrains.plugins.template
 pluginName = DartJsonGenerator
-pluginVersion = 3.1.1
+pluginVersion = 3.1.3
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html#intellij-platform-based-products-of-recent-ide-versions
 # for insight into build numbers and IntelliJ Platform versions.
 pluginSinceBuild = 171
-pluginUntilBuild = 211.*
+pluginUntilBuild = 213.*
 
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions.
-pluginVerifierIdeVersions = 2020.2.4, 2020.3.4, 2021.1
+#pluginVerifierIdeVersions = 2020.2.4, 2020.3.4, 2021.1
 
 platformType = IC
 platformVersion = 2020.2.4
