--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ hs_err_pid*
 /test/.packages
 /test/.dart_tool/package_config.json
 /test/pubspec.lock
+*.freezed.dart
+*.g.dart
+NewModel.dart
+.dart_tool/
+.packages
+pubspec.lock
+
+
