--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -1,11 +1,16 @@
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 name: flutter_format_ng_test
 description: Testing flutter_format_ng_test plugin
 version: 1.0.0
 
 dependencies:
+  freezed_annotation: ^2.1.0
+  json_annotation: ^4.6.0
 
 dev_dependencies:
+  build_runner: ^2.2.0
+  freezed: ^2.1.0+1
   test: ^1.17.5
+  json_serializable: ^6.3.1
