--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -25,9 +25,17 @@
 
   <actions>
     <!-- Add your actions here -->
-    <action id="DartJsonGenerator" class="com.justprodev.dart_json_generator.DartJsonFormatAction" text="Create Dart Class from JSON">
+    <action id="com.justprodev.dart_json_generator.DartJsonGenerateAction" class="com.justprodev.dart_json_generator.DartJsonGenerateAction" text="Dart Class from JSON">
       <add-to-group group-id="GenerateGroup" anchor="first"/>
       <keyboard-shortcut keymap="$default" first-keystroke="meta N"/>
+    </action>
+
+    <action id="DartJsonGenerator"
+            class="com.justprodev.dart_json_generator.DartJsonNewFileAction"
+            text="Dart Class from JSON"
+            icon="/META-INF/pluginIcon.svg">
+      <add-to-group group-id="NewGroup" anchor="before" relative-to-action="NewFile"/>
+
     </action>
   </actions>
 
