--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -40,7 +40,7 @@
             class="com.justprodev.dart_json_generator.DartJsonNewFileAction"
             text="Dart Class from JSON"
             icon="/META-INF/pluginIcon.svg">
-      <add-to-group group-id="NewGroup" anchor="after" relative-to-action="NewFile"/>
+      <add-to-group group-id="NewGroup" anchor="before" relative-to-action="NewFile"/>
 
     </action>
   </actions>
